src/test/resources/good/custom/008a-cse.lat
int main () {
    int x = readInt();
    int y = readInt();
    int z = x;
    int w = y;

    printInt(x + y * x);

    if (x != w) {
      printString("Y");
    } else {
      printString("N");
    }

    printInt(z + w * z);

    return 0;
}
