src/test/resources/bad/provided/037b-declaration-with-non-existent-type.lat
int main () {
    B b;
    return 0;
}
